# Summer-Pract_OpenMP_MPI

./: CMakeLists.txt  Fano.cpp  Fano.h  RLE.cpp  RLE.h  bmp_read.cpp  bmp_read.h  compile.sh  main.cpp  openmp.cpp  script.sh  stddfns.h
